# dummy_lib

dummy_lib_cpp/: CMakeLists.txt
dummy_lib_cpp/include/dummy_lib_cpp/datetime/: date.hpp  time.hpp
dummy_lib_cpp/include/dummy_lib_cpp/datetime/delta/: delta_date.hpp  delta_time.hpp
dummy_lib_cpp/include/dummy_lib_cpp/scheduling/: annual.hpp  monthly.hpp  schedule.hpp
dummy_lib_cpp/tests/: CMakeLists.txt
dummy_lib_cpp/tests/src/: UnitTests.cpp
dummy_lib_cpp/tests/src/datetime/: test_date.cpp  test_time.cpp
dummy_lib_cpp/tests/src/datetime/delta/: test_delta_date.cpp  test_delta_time.cpp
dummy_lib_cpp/tests/src/scheduling/: test_annual.cpp  test_monthly.cpp  test_schedule.cpp
dummy_lib_rust/: Cargo.toml
dummy_lib_rust/src/: lib.rs
dummy_lib_rust/src/datetime/: date.rs  mod.rs  time.rs
dummy_lib_rust/src/datetime/delta/: delta_date.rs  delta_time.rs  mod.rs
dummy_lib_rust/src/scheduling/: mod.rs  monthly.rs  schedule.rs
dummy_lib_rust/tests/: mod.rs
dummy_lib_rust/tests/datetime/: mod.rs  test_date.rs  test_time.rs
dummy_lib_rust/tests/datetime/delta/: mod.rs  test_delta_date.rs  test_delta_time.rs
dummy_lib_rust/tests/scheduling/: mod.rs  test_annual.rs  test_monthly.rs  test_schedule.rs
